--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/styles.css" />
         <!-- Components -->
         <link rel="stylesheet" href="components/score/score.component.css" />
+        <link rel="stylesheet" href="components/score-alt/score-alt.component.css" />
 
         <link rel="shortcut icon" href="favicon.ico" />
         <!-- Fonts -->
@@ -70,6 +71,10 @@
                         <div class="row justify-content-md-center">
                             <score score="scores[0]"></score>
                         </div>
+
+                        <div class="row justify-content-md-center">
+                            <score-alt score="scores[0]"></score-alt>
+                        </div>
                     </div>
                 </div>
 
@@ -117,5 +122,6 @@
         <script src="js/app.js"></script>
         <!-- Components -->
         <script src="components/score/score.component.js"></script>
+        <script src="components/score-alt/score-alt.component.js"></script>
     </body>
 </html>
