--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,11 @@
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="club-tab" data-bs-toggle="tab" data-bs-target="#club" type="button" role="tab" aria-controls="club" aria-selected="true">Club</button>
                 </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="equipment-tab" data-bs-toggle="tab" data-bs-target="#equipment" type="button" role="tab" aria-controls="equipment" aria-selected="true">
+                        Equipment
+                    </button>
+                </li>
             </ul>
 
             <!-- Tabs -->
@@ -214,7 +219,23 @@
                                 <p><a href="https://www.northeastarchers.co.uk/" target="_blank">North East Archers</a></p>
                             </div>
                         </div>
+                    </div>
+                </div>
 
+                <!-- Equipment -->
+                <div class="tab-pane fade" id="equipment" role="tabpanel" aria-labelledby="equipment-tab">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h2>Equipment</h2>
+                            </div>
+                        </div>
+
+                        <div class="row justify-content-md-center">
+                            <div class="col">
+                                <p>In Progress...</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
