--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,11 @@
                     <button class="nav-link" id="scores-tab" data-bs-toggle="tab" data-bs-target="#scores" type="button" role="tab" aria-controls="scores" aria-selected="true">Scores</button>
                 </li>
                 <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="charts-tab" data-bs-toggle="tab" data-bs-target="#charts" type="button" role="tab" aria-controls="charts" aria-selected="true">
+                        📊 Charts
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
                     <button class="nav-link" id="score-creator-tab" data-bs-toggle="tab" data-bs-target="#score-creator" type="button" role="tab" aria-controls="score-creator" aria-selected="true">
                         Score Creator
                     </button>
@@ -87,7 +92,8 @@
             <br />
 
             <!-- Tabs -->
-            <div class="tab-content" id="myTabContent">
+            <div class="tab-content" id="tabContent">
+
                 <!-- Summary -->
                 <div class="tab-pane fade show active" id="summary" role="tabpanel" aria-labelledby="summary-tab">
                     <div class="container">
@@ -140,6 +146,25 @@
 
                         <div class="row justify-content-md-center">
                             <scores scores="scores"></scores>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Charts -->
+                <div class="tab-pane fade" id="charts" role="tabpanel" aria-labelledby="charts-tab">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <h2>📊 Charts</h2>
+                            </div>
+                        </div>
+
+                        <br />
+
+                        <div class="row justify-content-md-center">
+                            <div class="col">
+                                <p>In Progress...</p>
+                            </div>
                         </div>
                     </div>
                 </div>
