--- a/src/index.html
+++ b/src/index.html
@@ -263,6 +263,7 @@
         <footer class="footer">
             <div class="container">
                 <span class="text-muted"> <a href="https://www.alexhedley.com/" target="_blank">Alex Hedley</a>.</span>
+                <span class="float-end">Update in <a href="https://github.com/AlexHedley/archery" target="_blank">GitHub</a></span>
             </div>
         </footer>
 
