--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,6 @@
 
                         <div class="row justify-content-md-center">
                             <div class="col">
-                                <p>In Progress...</p>
                                 <img src="images/north-east-archers.png" alt="North East Archers" />
                                 <p><a href="https://www.northeastarchers.co.uk/" target="_blank">North East Archers</a></p>
                             </div>
@@ -250,7 +249,7 @@
 
                         <div class="row justify-content-md-center">
                             <div class="col">
-                                <p>In Progress...</p>
+                                <p>Blog Post: <a href="https://alexhedley.com/blog/posts/archery-return" target="_blank">Archery Return</a></p>
                             </div>
                         </div>
                     </div>
